urgent fix button kirim

--- a/src/app/pages/sku-management/product-cashier/index/import-dialog/import-dialog.component.html
+++ b/src/app/pages/sku-management/product-cashier/index/import-dialog/import-dialog.component.html
@@ -76,7 +76,7 @@
             (click)="submit()"
             [disabled]="!isValid"
           >
-            {{ls.locale.global.button.send}}
+            {{'global.button.send' | translate}}
           </button>
           <button
             type="button"
