translation-sprint-3-2022: - fix missing translation

--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -24,7 +24,7 @@
                   formAudience.controls['name'].touched
                 "
               >
-                {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text'}} <!-- // TODO -->
+                {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
               </mat-error>
             </mat-form-field>
           </div>
@@ -82,7 +82,7 @@
                   formAudience.controls['min'].touched
                 "
               >
-                {{'dte.audience.text9' | translate }} {{'global.messages.mandatory_text'}} <!-- // TODO -->
+                {{'dte.audience.text9' | translate }} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
               </mat-error>
               <mat-error
                 *ngIf="
@@ -109,7 +109,7 @@
                   formAudience.controls['max'].touched
                 "
               >
-                {{'dte.audience.text10' | translate }} {{'global.messages.mandatory_text'}} <!-- // TODO -->
+                {{'dte.audience.text10' | translate }} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
               </mat-error>
               <mat-error
                 *ngIf="
@@ -163,7 +163,7 @@
                   ) && formAudience.controls['trade_scheduler_id'].touched
                 "
               >
-                {{'dte.pengatur_jadwal_program.text16' | translate }} {{'global.messages.mandatory_text'}} <!-- // TODO -->
+                {{'dte.pengatur_jadwal_program.text16' | translate }} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
               </mat-error>
             </mat-form-field>
           </div>
@@ -199,7 +199,7 @@
                   ) && formAudience.controls['trade_creator_id'].touched
                 "
               >
-                {{'dte.trade_program.text3' | translate}} {{'global.messages.mandatory_text'}} <!-- // TODO -->
+                {{'dte.trade_program.text3' | translate}} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
               </mat-error>
             </mat-form-field>
           </div>
