--- a/src/app/pages/dte/template/index/personalize/template-index-personalize.component.html
+++ b/src/app/pages/dte/template/index/personalize/template-index-personalize.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="mx-12" fxLayout="row" fxLayoutGap="16px" fxLayoutAlign="start center">
   <button id="btn-buatTugas" style="width: 170px" [routerLink]="['/dte','template-task', 'create-personalize']" mat-raised-button type="button" class="confirmation-button">
-    <mat-icon>add</mat-icon> {{'global.button.create'}}
+    <mat-icon>add</mat-icon> {{'global.button.create' | translate}}
   </button>
   <mat-form-field appearance="standard">
     <mat-label>{{'global.label.search' | translate}}</mat-label>
