--- a/src/app/pages/src-catalogue/order-catalogue/detail/order-catalogue-detail.component.html
+++ b/src/app/pages/src-catalogue/order-catalogue/detail/order-catalogue-detail.component.html
@@ -167,7 +167,7 @@
             </div>
             <div class="pb-16" fxLayout="row" fxLayoutAlign="start center">
               <mat-icon class="m-0 mr-16 secondary-text">local_shipping_outline</mat-icon>
-              <div class="h2 secondary-text">{{'katalog_src.lihat_pesanan.delivery_status'}}</div>
+              <div class="h2 secondary-text">{{'katalog_src.lihat_pesanan.delivery_status' | translate}}</div>
             </div>
             <div class="customer">
               <table class="simple">
