--- a/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
+++ b/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
@@ -13,7 +13,7 @@
           <div class="pb-16">
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                <strong>Grup Pengguna</strong>
+                <strong>{{'notification.buat_notifikasi.text4' | translate}}</strong>
               </h3>
             </div>
             <mat-radio-group formControlName="user_group" class="radio-group" (change)="selectChange($event)">
@@ -51,12 +51,12 @@
               </mat-form-field>
 
               <mat-form-field fxFlex="30" class="is-light form-primary">
-                <input matInput formControlName="recurrence_time" placeholder="Waktu Terbit" [ngxTimepicker]="time" [format]="24" readonly/>
+                <input matInput formControlName="recurrence_time" placeholder="{{'notification.buat_notifikasi.release_time' | translate}}" [ngxTimepicker]="time" [format]="24" readonly/>
                 <mat-icon matSuffix>access_time</mat-icon>
                 <ngx-material-timepicker #time></ngx-material-timepicker>
                 <mat-error
                   *ngIf="formNotification.controls['recurrence_time'].hasError('required') && formNotification.controls['recurrence_time'].touched">
-                  Waktu terbit harus diisi
+                  {{'notification.buat_notifikasi.release_time' | translate}} harus diisi
                 </mat-error>
               </mat-form-field>
             </div>
