update type file handling at import notif

--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -634,10 +634,10 @@
                 fxLayoutAlign="end center" class="p-16 export">
                 <a #downloadLink></a>
                 <button mat-raised-button type="button" class="is-danger" (click)="import()">
-                  <mat-icon>arrow_downward</mat-icon> Import XLS
+                  <mat-icon>arrow_downward</mat-icon> Import XLSX
                 </button>
                 <button mat-raised-button type="button" class="is-danger" (click)="export()">
-                  <mat-icon>arrow_upward</mat-icon> Export XLS
+                  <mat-icon>arrow_upward</mat-icon> Export XLSX
                 </button>
               </div>
               <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator">
