--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>Unggah File {{dialogData.type ? dialogData.type.toUpperCase() : ''}}</span>
+        <span>Unggah File {{dialogData.fileType ? dialogData.fileType.toUpperCase() : ''}}</span>
       </div>
 
     </div>
